# fluid-sim

./: .gitignore  CMakeLists.txt  README.org  run.sh
.cache/clangd/index/: main.cpp.3FEA825F82678B82.idx  physics.cpp.B1A82BD86CAE42FA.idx  physics.hpp.997C0F5232C9BEA5.idx  utils.cpp.60858FBE8A985798.idx  utils.hpp.8CEC1D9A80AC2601.idx
include/: physics.hpp  utils.hpp
src/: main.cpp  physics.cpp  utils.cpp
